added roadmap cards, tokenomics and merch section

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,8 @@ main {
 
 .vision-wrapper {
   background-image: url(./assets/bg-vectors/vision-bg.png);
-  /* background-size: cover; */
+  background-size: auto;
   background-repeat: no-repeat;
   position: relative;
+  height: fit-content;
 }
